# stac-rucio

./: .gitignore  .pre-commit-config.yml  Dockerfile  README.md  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
examples/: demo_example.ipynb  stac_integration.ipynb
stac_rucio/: __init__.py  client.py  models.py
